ST-2813: Publish maven artifacts to staging repo if doing a release build